{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 22,
  "lineage": "4c191449-c2a9-2099-24d2-cab3d019782f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "xreg_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.154.108.73",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-05-12T07:00:39.865-07:00",
            "description": "Static IP for X-REG VM",
            "id": "projects/merit-496108/regions/europe-west8/addresses/xreg-external-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "xreg-external-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "merit-496108",
            "region": "europe-west8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/merit-496108/regions/europe-west8/addresses/xreg-external-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/merit-496108/zones/europe-west8-b/instances/xreg-vm"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2026-05-12T07:00:48.233-07:00",
            "deny": [],
            "description": "Allow all egress (Docker Hub, OS updates, optional outbound APIs)",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/merit-496108/global/firewalls/xreg-allow-egress",
            "log_config": [],
            "name": "xreg-allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/networks/xreg-vpc",
            "priority": 1000,
            "project": "merit-496108",
            "self_link": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/firewalls/xreg-allow-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "xreg-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.xreg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-12T07:00:48.174-07:00",
            "deny": [],
            "description": "Allow HTTPS from whitelisted IPs",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/merit-496108/global/firewalls/xreg-allow-https",
            "log_config": [],
            "name": "xreg-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/networks/xreg-vpc",
            "priority": 1000,
            "project": "merit-496108",
            "self_link": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/firewalls/xreg-allow-https",
            "source_ranges": [
              "93.34.233.26/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "xreg-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.xreg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-12T07:00:48.265-07:00",
            "deny": [],
            "description": "Allow SSH from Google IAP (35.235.240.0/20)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/merit-496108/global/firewalls/xreg-allow-iap-ssh",
            "log_config": [],
            "name": "xreg-allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/networks/xreg-vpc",
            "priority": 1000,
            "project": "merit-496108",
            "self_link": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/firewalls/xreg-allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "xreg-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.xreg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-05-12T07:00:49.292-07:00",
            "deny": [],
            "description": "Allow internal subnet communication",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/merit-496108/global/firewalls/xreg-allow-internal",
            "log_config": [],
            "name": "xreg-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/networks/xreg-vpc",
            "priority": 1000,
            "project": "merit-496108",
            "self_link": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/firewalls/xreg-allow-internal",
            "source_ranges": [
              "10.10.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "xreg-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.xreg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-12T07:00:48.371-07:00",
            "deny": [],
            "description": "Allow SSH from admin IPs only",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/merit-496108/global/firewalls/xreg-allow-ssh",
            "log_config": [],
            "name": "xreg-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/networks/xreg-vpc",
            "priority": 1000,
            "project": "merit-496108",
            "self_link": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/firewalls/xreg-allow-ssh",
            "source_ranges": [
              "93.34.233.26/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "xreg-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.xreg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_all_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2026-05-12T07:00:49.672-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "Default deny all ingress traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/merit-496108/global/firewalls/xreg-deny-all-ingress",
            "log_config": [],
            "name": "xreg-deny-all-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/networks/xreg-vpc",
            "priority": 65534,
            "project": "merit-496108",
            "self_link": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/firewalls/xreg-deny-all-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.xreg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "xreg_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260505",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 60,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/merit-496108/zones/europe-west8-b/disks/xreg-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "X-REG tool server — Docker Compose (app + Caddy)",
            "effective_labels": {
              "app": "xreg",
              "environment": "production",
              "managed_by": "terraform"
            },
            "enable_display": false,
            "id": "projects/merit-496108/zones/europe-west8-b/instances/xreg-vm",
            "instance_id": "6073125695636016201",
            "label_fingerprint": "D5wd8s9u5Tk=",
            "labels": {
              "app": "xreg",
              "environment": "production",
              "managed_by": "terraform"
            },
            "machine_type": "n2-standard-8",
            "metadata": {
              "block-project-ssh-keys": "TRUE",
              "enable-oslogin": "FALSE",
              "ssh-keys": "xreg-user:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCkshEhqIR4tR0t2quciD66Jhz0b5FTNKGYHOZMHnEPvVwi6a/7+w8mOg8cRqBLhErkpW/OqqvPSaZRLCpPCqP7zTEDxrZ+qVcHXcwd+G12TikkqqLrCj7Stkx/WaDEaFtz16pqoNwphPe85ulyWZq9NdTH7HgQkYwXwehyR1qaRfV2oBq/WbOn1sDp4vAVsbfAjzSa8Ei7R65Hn0sJWNAMDn+5Flc7g+3pJd11GJOt4JGyAKGAZFgaFwiVf+ZhIqx9/XHfK65E+JzABAN9vM/U3paLCmjZA8qK05EKF0CZlAkouZnOFL3IwmWgIBLX5zRNqIAxFx3NKlZwWQj+RL3WW+mJuhHfJdOhHgH4ornBvj2BBsKQBY+exAyL4epYCEx6ghhC6+6oRlRHfi/riJ4kx0b2VF8k+B0pVxXPaIx [...]
            },
            "metadata_fingerprint": "lKuSMYz0hG4=",
            "metadata_startup_script": "#!/bin/bash\nset -euo pipefail\n\n# ─── Logging ─────────────────────────────────────────────────────────────────\nexec \u003e \u003e(tee /var/log/xreg-startup.log) 2\u003e\u00261\necho \"=== X-REG startup script BEGIN $(date -u) ===\"\n\n# ─── System Hardening ────────────────────────────────────────────────────────\nsysctl -w net.ipv4.ip_forward=0 || true\nsysctl -w net.ipv4.conf.all.accept_redirects=0 || true\nsysctl -w net.ipv4.conf.default.accept_redi [...]
            "name": "xreg-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.154.108.73",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/networks/xreg-vpc",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/merit-496108/regions/europe-west8/subnetworks/xreg-subnet",
                "subnetwork_project": "merit-496108"
              }
            ],
            "project": "merit-496108",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/merit-496108/zones/europe-west8-b/instances/xreg-vm",
            "service_account": [
              {
                "email": "xreg-vm-sa@merit-496108.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "xreg-vm"
            ],
            "tags_fingerprint": "C20KGbwwRVs=",
            "terraform_labels": {
              "app": "xreg",
              "environment": "production",
              "managed_by": "terraform"
            },
            "zone": "europe-west8-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.xreg_ip",
            "google_compute_network.xreg_vpc",
            "google_compute_subnetwork.xreg_subnet",
            "google_project_service.compute",
            "google_project_service.os_login",
            "google_service_account.xreg_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "xreg_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Isolated VPC for X-REG deployment",
            "enable_ula_internal_ipv6": false,
            "id": "projects/merit-496108/global/networks/xreg-vpc",
            "mtu": 0,
            "name": "xreg-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2210892946166680683",
            "project": "merit-496108",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/networks/xreg-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "xreg_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-12T07:00:48.881-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/merit-496108/regions/europe-west8/subnetworks/xreg-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "xreg-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/merit-496108/global/networks/xreg-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "merit-496108",
            "purpose": "PRIVATE",
            "region": "europe-west8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/merit-496108/regions/europe-west8/subnetworks/xreg-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.xreg_vpc"
          ]
        }
      ]
    }
  ]
}